# condition-cpp

./: .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  condition++.hh  condition-cpp.hh  condition-cpp.nix  default.nix  mvp.cc  tests.cc
tests/: CMakeLists.txt  tests.cc
